// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <ul
      class="sc-gsNilK sc-eGRUor hvvdBy bMchgE sc-ctqQKy cSSyDf"
    >
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          You can put 
          <a
            class="sc-fbyfCU hJTRtN sc-GEbAx hJvBRH"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          Multiline text
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <ol
      class="sc-gsNilK sc-bXTejn hvvdBy cFyyFj sc-ctqQKy cSSyDf"
    >
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          You can put 
          <a
            class="sc-fbyfCU hJTRtN sc-GEbAx hJvBRH"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          Multiline text
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
